--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,29 @@
-#数据库账号
+# server
+server.port=9000
+server.error.path=/error
+server.tomcat.uri-encoding=UTF-8
+
+# db
 spring.datasource.username=root
-#数据库密码test
 spring.datasource.password=root
-#数据库链接地址
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/picturebed?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
-#端口
-server.port=8088
+
+# log
+logging.file=D:/logs/tbed/log.log
+logging.level.root=warn
+
 #鉴黄周期表达式 下方表达式为每天七点半执行
 #不懂请勿乱修改。具体可以参考官方文档http://doc.wwery.com
 Expression=0 30 04 * * ?
 
+# 图片链接是否使用HTTPS, 1启用/0禁用
+system.enable-https=0
+system.image.save.path.windows=D:/tbed/
+system.image.save.path.linux=/usr/local/tbed/
 
 #下边的配置项不需要修改。
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
-logging.level.cn.hellohao.dao=debug
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
