--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,11 @@ logging.level.root=warn
 #不懂请勿乱修改。具体可以参考官方文档http://doc.wwery.com
 Expression=0 30 04 * * ?
 
-# 图片链接是否使用HTTPS, 1启用/0禁用
-system.enable-https=0
+# 图片访问地址, 如: 127.0.0.1:9000/, 或: http://image.bai.com/, 默认是: http://ip:port/
+system.image.save-domain=http://image.su.com/
 system.image.save.path.windows=D:/tbed/
 system.image.save.path.linux=/usr/local/tbed/
+
 
 #下边的配置项不需要修改。
 mybatis.configuration.map-underscore-to-camel-case=true
