--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-# 0. ÏµÍ³ÅäÖÃ
-# Í¼Æ¬·ÃÎÊµØÖ·, Èç: 127.0.0.1:9000/, »ò: http://image.bai.com/, Ä¬ÈÏÊÇ: http://ip:port/
+# 0. ç³»ç»Ÿé…ç½®
+# å›¾ç‰‡è®¿é—®åœ°å€, å¦‚: 127.0.0.1:9000/, æˆ–: http://image.bai.com/, é»˜è®¤æ˜¯: http://ip:port/
 system.image.save-domain=
 
 system.image.save.path.windows=D:/tbed/
 
 system.image.save.path.linux=/usr/local/tbed/
 
-# ÓÎ¿Í¿ÉÓÃµÄ×î´ó´æ´¢¿Õ¼ä, µ¥Î»: KB, ÖµÎª -1 Ôò±íÊ¾ÎŞÏŞÖÆ
+# æ¸¸å®¢å¯ç”¨çš„æœ€å¤§å­˜å‚¨ç©ºé—´, å€¼ä¸º -1 åˆ™è¡¨ç¤ºæ— é™åˆ¶, å•ä½: KB
 system.image.tourist-total-memory=5000
 
-# ÓÎ¿ÍÄÜ·ñÉÏ´«Í¼Æ¬, 1ÊÇ/0·ñ, Ä¬ÈÏ: 1
+# æ¸¸å®¢èƒ½å¦ä¸Šä¼ å›¾ç‰‡, 1æ˜¯/0å¦, é»˜è®¤: 1
 system.image.tourist-uploadable=1
 
 # 1. server
@@ -27,11 +27,10 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/picturebed?useUnicode=true&cha
 logging.file=D:/logs/tbed/log.log
 logging.level.root=warn
 
-#¼ø»ÆÖÜÆÚ±í´ïÊ½ ÏÂ·½±í´ïÊ½ÎªÃ¿ÌìÆßµã°ëÖ´ĞĞ
-#²»¶®ÇëÎğÂÒĞŞ¸Ä¡£¾ßÌå¿ÉÒÔ²Î¿¼¹Ù·½ÎÄµµhttp://doc.wwery.com
+#é‰´é»„å‘¨æœŸè¡¨è¾¾å¼ ä¸‹æ–¹è¡¨è¾¾å¼ä¸ºæ¯å¤©ä¸ƒç‚¹åŠæ‰§è¡Œ
+#ä¸æ‡‚è¯·å‹¿ä¹±ä¿®æ”¹ã€‚å…·ä½“å¯ä»¥å‚è€ƒå®˜æ–¹æ–‡æ¡£http://doc.wwery.com
 Expression=0 30 04 * * ?
 
-#ÏÂ±ßµÄÅäÖÃÏî²»ĞèÒªĞŞ¸Ä¡£
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
