--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,10 @@ system.image.tourist-total-memory=5000
 
 # 游客能否上传图片, 1是/0否, 默认: 1
 system.image.tourist-uploadable=1
+# 游客单次上传的限制大小, 单位: KB
+system.image.tourist-upload-max-size=500
+# 用户单次上传的限制大小, 单位: KB
+system.image.user-upload-max-size=5000
 
 # 1. server
 server.port=9000
