--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.13</version>
+        </dependency>
 
         <dependency>
             <groupId>nekohtml</groupId>
