--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+spring.profiles.active=dev
+#spring.profiles.active=prod
 # 0. 系统配置
 # 图片访问地址, 如: 127.0.0.1:9000/, 或: http://image.bai.com/, 默认是: http://ip:port/
-system.image.save-domain=
+#system.image.save-domain=
 
 system.image.save.path.windows=D:/tbed/
 
@@ -17,19 +19,19 @@ system.image.tourist-once-upload-max-size=500
 system.image.user-once-upload-max-size=5000
 
 # 1. server
-server.port=9000
+#server.port=9000
 server.error.path=/error
 server.tomcat.uri-encoding=UTF-8
 
 # 2. db
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.username=root
+#spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/picturebed?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/picturebed?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
 
-# log
-logging.file=D:/logs/tbed/log.log
-logging.level.root=warn
+# 3. log
+#logging.file=D:/logs/tbed/log.log
+#logging.level.root=warn
 
 #鉴黄周期表达式 下方表达式为每天七点半执行
 #不懂请勿乱修改。具体可以参考官方文档http://doc.wwery.com
