--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,16 @@ spring.profiles.active=dev
 # 0. 系统配置
 # 图片访问地址, 如: 127.0.0.1:9000/, 或: http://image.bai.com/, 默认是: http://ip:port/
 #system.image.save-domain=
-
+# 是否启用注册功能, 1是/0否, 默认: 1
+system.enable-register=1
+# 注册时是否启用邮箱验证, 1是/0否, 默认: 1
+system.enable-email-verification=0
 system.image.save.path.windows=D:/tbed/
 
 system.image.save.path.linux=/usr/local/tbed/
 
+# 用户默认的最大存储空间, 值为 -1 则表示无限制, 单位: KB
+system.image.user-default-memory=10240
 # 游客可用的最大存储空间, 值为 -1 则表示无限制, 单位: KB
 system.image.tourist-total-memory=5000
 
