--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/picturebed?useUnicode=true&cha
 
 # 3. log
 logging.file=D:/logs/tbed/log.log
-logging.level.root=debug
+logging.level.root=warn
 
 
 
